responsive layout bug fixes

--- a/styles/sass/_layout.scss
+++ b/styles/sass/_layout.scss
@@ -486,3 +486,7 @@ header[class^="header--"] {
     @include border-radius(10px);
   }
 }
+
+.inverstor-video--iframe {
+  height: 550px;
+}
